<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/details_background"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".DollEditActivity">

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="cursive"
        android:text="@string/new_doll"
        android:textColor="@color/teal"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/doll_image"
        android:scaleType="centerInside"
        app:layout_constraintTop_toBottomOf="@id/edit_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="160dp"
        android:src="@drawable/outline_add_photo_alternate_24"
        android:contentDescription="@string/doll_image"
        android:layout_height="160dp"/>

    <Button
        android:textColor="@color/purple"
        android:id="@+id/photo_button"
        android:fontFamily="cursive"
        android:textSize="28sp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/purple"
        android:onClick="choosePhoto"
        android:text="@string/doll_photo"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doll_image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnCount="2"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo_button">

        <TextView
            android:fontFamily="sans-serif-medium"
            android:text="@string/name_str"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_doll_name"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/doll_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <TextView
            android:fontFamily="sans-serif-medium"
            android:text="@string/model_str"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_doll_model"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/doll_model"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <TextView
            android:fontFamily="sans-serif-medium"
            android:text="@string/company_str"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_doll_company"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/doll_company"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <TextView
            android:fontFamily="sans-serif-medium"
            android:text="@string/brand_str"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_doll_brand"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/doll_brand"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <TextView
            android:fontFamily="sans-serif-medium"
            android:text="@string/year_str"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_doll_year"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/doll_year"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <TextView
            android:fontFamily="sans-serif-medium"
            android:text="@string/cost_str"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_doll_cost"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/doll_cost"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <TextView
            android:fontFamily="sans-serif-medium"
            android:text="@string/body_str"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_doll_type"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/doll_type"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <TextView
            android:fontFamily="sans-serif-medium"
            android:text="@string/wig_str"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_doll_wig_color"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/doll_wig_color"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <TextView
            android:fontFamily="sans-serif-medium"
            android:text="@string/eye_str"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_doll_eye_color"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/doll_eye_color"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/grid"
        android:id="@+id/linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/cancel_button"
            android:text="@string/cancel_button"
            android:fontFamily="cursive"
            android:textColor="@color/purple"
            android:textSize="31sp"
            android:textStyle="bold"
            android:strokeColor = "@color/purple"
            app:strokeWidth = "1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:onClick="cancelEdit"/>

        <Button
            android:id="@+id/save_button"
            android:text="@string/save_button"
            android:fontFamily="cursive"
            android:textColor="@color/purple"
            android:textSize="31sp"
            android:textStyle="bold"
            android:strokeColor = "@color/purple"
            app:strokeWidth = "1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClick="saveDoll"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>